--- a/order.html
+++ b/order.html
@@ -14,6 +14,7 @@
 	<div id="order"></div>
 	<div id="spinner"></div>
 	<div id="error"></div>
+	<div id="orderinfo"></div>
 
 
 	<script src="constants/root.js"></script>
